--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-	"scripts": { 
+	"main": "server.js",
+	"scripts": {
 		"start": "node server.js"
 	},
-  "dependencies": {
-    "@okta/jwt-verifier": "^2.3.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "node-storage": "^0.0.9",
-    "simple-encryptor": "^4.0.0"
-  }
+	"dependencies": {
+		"@okta/jwt-verifier": "^2.3.0",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"node-storage": "^0.0.9",
+		"simple-encryptor": "^4.0.0"
+	}
 }
